--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+wq<!doctype html>
 <html lang="en" data-framework="backbonejs">
 	<head>
 		<meta charset="utf-8">
@@ -26,7 +26,8 @@
 		<script type="text/template" id="item-template">
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-				<label><%- title %></label>
+				<label><%- title %> <%= completed ? ' -- done!!' : '' %> </label>
+				<button class="edit-btn"></button>
 				<button class="destroy"></button>
 			</div>
 			<input class="edit" value="<%- title %>">
